==> stm32duino/Arduino_Core_STM32/cores/arduino/stm32/twi.c <==
#include "stm32_def.h"
#include "hw_config.h"
#include "twi.h"
#include "PinAF_STM32F1.h"
#define I2C_TIMEOUT_TICK        100
#define SLAVE_MODE_TRANSMIT     0
#define SLAVE_MODE_RECEIVE      1
#define I2C_NUM (5)

void i2c_init(i2c_t *obj)
{
  i2c_custom_init(obj, I2C_100KHz, I2C_ADDRESSINGMODE_7BIT, 0x33, 1);
}

void i2c_custom_init(i2c_t *obj, i2c_timing_e timing, uint32_t addressingMode, uint32_t ownAddress, uint8_t master)
{
  if(obj == NULL)
    return;

  GPIO_InitTypeDef  GPIO_InitStruct;
  GPIO_TypeDef *port;
  I2C_HandleTypeDef *handle = &(obj->handle);

  // Determine the I2C to use
  I2C_TypeDef *i2c_sda = pinmap_peripheral(obj->sda, PinMap_I2C_SDA);
  I2C_TypeDef *i2c_scl = pinmap_peripheral(obj->scl, PinMap_I2C_SCL);

  obj->i2c = pinmap_merge_peripheral(i2c_sda, i2c_scl);

  if(obj->i2c == NP) {
    printf("ERROR: I2C pins mismatch\n");
    return;
  }

#if defined I2C1_BASE
  // Enable I2C1 clock if not done
  if (obj->i2c == I2C1) {
      __HAL_RCC_I2C1_CLK_ENABLE();
      __HAL_RCC_I2C1_FORCE_RESET();
      __HAL_RCC_I2C1_RELEASE_RESET();
      obj->irq = I2C1_EV_IRQn;
#ifdef STM32F1xx
      obj->irqER = I2C1_ER_IRQn;
#endif
      i2c_handles[0] = handle;
  }
#endif
#if defined I2C2_BASE
  // Enable I2C2 clock if not done
  if (obj->i2c == I2C2) {
      __HAL_RCC_I2C2_CLK_ENABLE();
      __HAL_RCC_I2C2_FORCE_RESET();
      __HAL_RCC_I2C2_RELEASE_RESET();
#ifdef STM32F0xx
      obj->irq = I2C2_IRQn;
#else
      obj->irq = I2C2_EV_IRQn;
#ifdef STM32F1xx
      obj->irqER = I2C2_ER_IRQn;
#endif
#endif
      i2c_handles[1] = handle;
  }
#endif
#if defined I2C3_BASE
  // Enable I2C3 clock if not done
  if (obj->i2c == I2C3) {
      __HAL_RCC_I2C3_CLK_ENABLE();
      __HAL_RCC_I2C3_FORCE_RESET();
      __HAL_RCC_I2C3_RELEASE_RESET();
      obj->irq = I2C3_EV_IRQn;
      i2c_handles[2] = handle;
  }
#endif
#if defined I2C4_BASE
  // Enable I2C3 clock if not done
  if (obj->i2c == I2C4) {
      __HAL_RCC_I2C4_CLK_ENABLE();
      __HAL_RCC_I2C4_FORCE_RESET();
      __HAL_RCC_I2C4_RELEASE_RESET();
      obj->irq = I2C4_EV_IRQn;
      i2c_handles[3] = handle;
  }
#endif

  //SCL
  port = set_GPIO_Port_Clock(STM_PORT(obj->scl));
  GPIO_InitStruct.Pin         = STM_GPIO_PIN(obj->scl);
  GPIO_InitStruct.Mode        = STM_PIN_MODE(pinmap_function(obj->scl,PinMap_I2C_SCL));
  GPIO_InitStruct.Speed       = GPIO_SPEED_FREQ_HIGH;
  GPIO_InitStruct.Pull        = STM_PIN_PUPD(pinmap_function(obj->scl,PinMap_I2C_SCL));
#ifdef STM32F1xx
  pin_SetF1AFPin(STM_PIN_AFNUM(pinmap_function(obj->scl,PinMap_I2C_SCL)));
#else
  GPIO_InitStruct.Alternate   = STM_PIN_AFNUM(pinmap_function(obj->scl,PinMap_I2C_SCL));
#endif /* STM32F1xx */
  HAL_GPIO_Init(port, &GPIO_InitStruct);

  //SDA
  port = set_GPIO_Port_Clock(STM_PORT(obj->sda));
  GPIO_InitStruct.Pin         = STM_GPIO_PIN(obj->sda);
  GPIO_InitStruct.Mode        = STM_PIN_MODE(pinmap_function(obj->sda,PinMap_I2C_SDA));
  GPIO_InitStruct.Speed       = GPIO_SPEED_FREQ_HIGH;
  GPIO_InitStruct.Pull        = STM_PIN_PUPD(pinmap_function(obj->sda,PinMap_I2C_SDA));
#ifdef STM32F1xx
  pin_SetF1AFPin(STM_PIN_AFNUM(pinmap_function(obj->sda,PinMap_I2C_SDA)));
#else
  GPIO_InitStruct.Alternate   = STM_PIN_AFNUM(pinmap_function(obj->sda,PinMap_I2C_SDA));
#endif /* STM32F1xx */
  HAL_GPIO_Init(port, &GPIO_InitStruct);

  handle->Instance             = obj->i2c;
#if defined (STM32F0xx) || defined (STM32F3xx) || defined (STM32F7xx) ||\
    defined (STM32L0xx) || defined (STM32L4xx)
  handle->Init.Timing      = timing;
#else
  handle->Init.ClockSpeed      = timing;
  handle->Init.DutyCycle       = I2C_DUTYCYCLE_2;//16_9;
#endif
  handle->Init.OwnAddress1     = ownAddress;
  handle->Init.OwnAddress2     = 0xFF;
  handle->Init.AddressingMode  = addressingMode;
  handle->Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
  handle->Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
  handle->Init.NoStretchMode   = I2C_NOSTRETCH_DISABLE;

  if(master == 0) {
    HAL_NVIC_SetPriority(obj->irq, 0, 1);
    HAL_NVIC_EnableIRQ(obj->irq);
#ifdef STM32F1xx
    HAL_NVIC_SetPriority(obj->irqER, 0, 1);
    HAL_NVIC_EnableIRQ(obj->irqER);
#endif
  }

  // Init the I2C
  HAL_I2C_Init(handle);
}

void i2c_deinit(i2c_t *obj)
{
  HAL_NVIC_DisableIRQ(obj->irq);
#ifdef STM32F1xx
  HAL_NVIC_DisableIRQ(obj->irqER);
#endif
  HAL_I2C_DeInit(&(obj->handle));
}

void i2c_setTiming(i2c_t *obj, uint32_t frequency)
{
  uint32_t f = I2C_10KHz;
  __HAL_I2C_DISABLE(&(obj->handle));

  if(frequency <= 10000)
    f = I2C_10KHz;
  else if(frequency <= 50000)
    f = I2C_50KHz;
  else if(frequency <= 100000)
    f = I2C_100KHz;
  else if(frequency <= 200000)
    f = I2C_200KHz;
  else if(frequency <= 400000)
    f = I2C_400KHz;

#if defined (STM32F0xx) || defined (STM32F3xx) || defined (STM32F7xx) ||\
    defined (STM32L0xx) || defined (STM32L4xx)
  obj->handle.Init.Timing = f;
#else
  obj->handle.Init.ClockSpeed = f;
#endif
/*
  else if(frequency <= 600000)
    g_i2c_init_info[i2c_id].i2c_handle.Init.ClockSpeed = I2C_600KHz;
  else if(frequency <= 800000)
    g_i2c_init_info[i2c_id].i2c_handle.Init.ClockSpeed = I2C_800KHz;
  else
    g_i2c_init_info[i2c_id].i2c_handle.Init.ClockSpeed = I2C_1000KHz;
*/
  HAL_I2C_Init(&(obj->handle));
  __HAL_I2C_ENABLE(&(obj->handle));
}

i2c_status_e i2c_master_write(i2c_t *obj, uint8_t dev_address,
                        uint8_t *data, uint8_t size)

{
  i2c_status_e ret = I2C_ERROR;
  HAL_StatusTypeDef status = HAL_OK;

  // Check the communication status
  status = HAL_I2C_Master_Transmit(&(obj->handle), dev_address, data, size, I2C_TIMEOUT_TICK);

  if(status == HAL_OK)
    ret = I2C_OK;
  else if(status == HAL_TIMEOUT)
    ret = I2C_TIMEOUT;
  else
    ret = I2C_ERROR;

  return ret;
}

i2c_status_e i2c_master_read(i2c_t *obj, uint8_t dev_address, uint8_t *data, uint8_t size)
{
  i2c_status_e ret = I2C_ERROR;

  if(HAL_I2C_Master_Receive(&(obj->handle), dev_address, data, size, I2C_TIMEOUT_TICK) == HAL_OK) {
    ret = I2C_OK;
  }

  return ret;
}

i2c_status_e i2c_IsDeviceReady(i2c_t *obj, uint8_t devAddr, uint32_t trials)
{
  i2c_status_e ret = HAL_OK;

  if(HAL_I2C_IsDeviceReady( &(obj->handle), devAddr, trials, I2C_TIMEOUT_TICK) != HAL_OK) {
    ret = I2C_BUSY;
  }

  return ret;
}

void I2C1_EV_IRQHandler(void)
{
  I2C_HandleTypeDef * handle = i2c_handles[0];
  HAL_I2C_EV_IRQHandler(handle);
}

void I2C1_ER_IRQHandler(void)
{
  I2C_HandleTypeDef * handle = i2c_handles[0];
  HAL_I2C_ER_IRQHandler(handle);
}

void I2C2_EV_IRQHandler(void)
{
  I2C_HandleTypeDef * handle = i2c_handles[1];
  HAL_I2C_EV_IRQHandler(handle);
}

void I2C2_ER_IRQHandler(void)
{
  I2C_HandleTypeDef * handle = i2c_handles[1];
  HAL_I2C_ER_IRQHandler(handle);
}
