==> alexpa940/ch32v307_for_fun/Wiring/ch32v307/twi.c <==
#include <stddef.h>
#include "twi.h"
#include "Arduino.h"

void i2c_init(i2c_t *obj)
{
  i2c_custom_init(obj, I2C_DEFAULT_SPEED, 0, I2C_ADDMODE_7BIT, 0x33, 1);
}

void i2c_custom_init(i2c_t *obj, uint32_t timing,
		  	  	  	   uint8_t remap_s, uint16_t addressingMode, uint16_t ownAddress,
					   uint8_t master)
{

  I2C_InitTypeDef  I2C_InitTSturcture = {0};
  GPIO_InitTypeDef GPIO_InitStructure = {0};
  NVIC_InitTypeDef NVIC_InitStructure;

  if(obj->I2Cx == I2C1)
  {
	  I2C_LocalObject1 = obj;
	  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB | RCC_APB2Periph_AFIO, ENABLE);

	  if(remap_s == 0)
	  {
		  GPIO_PinRemapConfig(GPIO_Remap_I2C1, DISABLE);
	  } else {
		  GPIO_PinRemapConfig(GPIO_Remap_I2C1, ENABLE);
	  }
	  RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C1, ENABLE);

	  if(remap_s == 0)
	  {
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOB, &GPIO_InitStructure);

		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_7;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOB, &GPIO_InitStructure);
	  }
	  else
	  {

		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_8;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOB, &GPIO_InitStructure);

		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOB, &GPIO_InitStructure);
	  }

  }
  else if (obj->I2Cx == I2C2)
  {
	  I2C_LocalObject2 = obj;

	  if(remap_s == 0)
	  {
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOB, &GPIO_InitStructure);

		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_11;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOB, &GPIO_InitStructure);
	  } else {
		  return; //I2C2 cant be remaped
	  }
  }

  I2C_DeInit(obj->I2Cx);

  I2C_InitTSturcture.I2C_ClockSpeed = timing;
  I2C_InitTSturcture.I2C_Mode = I2C_Mode_I2C;
  I2C_InitTSturcture.I2C_DutyCycle = I2C_DutyCycle_2;
  I2C_InitTSturcture.I2C_OwnAddress1 = ownAddress;
  I2C_InitTSturcture.I2C_Ack = I2C_Ack_Enable;
  I2C_InitTSturcture.I2C_AcknowledgedAddress = addressingMode;
  I2C_Init(obj->I2Cx, &I2C_InitTSturcture);


  obj->addressingMode = addressingMode;
  obj->Address = ownAddress;

  if (master == 0)
  {
	/* Configure the I2C event priority */
	if(obj->I2Cx == I2C1)
	{
		NVIC_InitStructure.NVIC_IRQChannel = I2C1_EV_IRQn;
	}
	else if (obj->I2Cx == I2C2)
	{
		NVIC_InitStructure.NVIC_IRQChannel = I2C2_EV_IRQn;
	}

	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority        = 0;
	NVIC_InitStructure.NVIC_IRQChannelCmd                = ENABLE;
	NVIC_Init(&NVIC_InitStructure);

	//Configure I2C error interrupt to have the higher priority.

	if(obj->I2Cx == I2C1)
	{
		NVIC_InitStructure.NVIC_IRQChannel = I2C1_ER_IRQn;
	}
	else if (obj->I2Cx == I2C2)
	{
		NVIC_InitStructure.NVIC_IRQChannel = I2C2_ER_IRQn;
	}
	NVIC_Init(&NVIC_InitStructure);

	I2C_ITConfig(obj->I2Cx, I2C_IT_EVT, ENABLE); //Part of the STM32 I2C driver
	I2C_ITConfig(obj->I2Cx, I2C_IT_BUF, ENABLE);
	I2C_ITConfig(obj->I2Cx, I2C_IT_ERR, ENABLE); //Part of the STM32 I2C driver
  }
  else
  {
	  I2C_AcknowledgeConfig(obj->I2Cx, ENABLE);
  }
  obj->init_done = 1;
  obj->isMaster = master;
  obj->remap = remap_s;
}

void i2c_deinit(i2c_t *obj)
{
  if (obj->I2Cx  == I2C1)
  {

	RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C1, DISABLE);
    GPIO_PinRemapConfig(GPIO_Remap_I2C1, DISABLE);
  } else {
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C2, DISABLE);
  }
  I2C_DeInit(obj->I2Cx);
  obj->init_done = 0;
}

void i2c_setTiming(i2c_t *obj, uint32_t frequency)
{
  if (obj->init_done == 1)
  {
      i2c_custom_init(obj, frequency, obj->remap, obj->addressingMode, obj->Address, obj->isMaster);
  }
}

i2c_status_e i2c_IsDeviceReady(i2c_t *obj, uint8_t dev_address,
                              uint32_t trials)
{
  if (obj->init_done == 1)
  {
    /* Send START condition */
    I2C_GenerateSTART(obj->I2Cx, ENABLE);

    /* Test on EV5 and clear it */
    if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_MODE_SELECT) != READY)
        return I2C_BUSY;

    /* Send slave address + write condition */
    I2C_Send7bitAddress(obj->I2Cx, dev_address, I2C_Direction_Transmitter);

    if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED) != READY){
        return I2C_TIMEOUT;
    } else {
        /*!< Clear AF flag */
        I2C_ClearFlag(obj->I2Cx, I2C_FLAG_AF);

        /*!< STOP condition */
        I2C_GenerateSTOP(obj->I2Cx, ENABLE);

        return I2C_OK;
    }
  }
  else
  {
    return I2C_ERROR;
  }

}

i2c_status_e i2c_master_write(i2c_t *obj, uint8_t dev_address,
                              uint8_t *data, uint8_t size)
{
  if (size == 0) {
    return i2c_IsDeviceReady(obj, dev_address, 1);
  }

  if (obj->init_done == 1)
  {
    /* Send START condition */
    I2C_GenerateSTART(obj->I2Cx, ENABLE);

    /* Test on EV5 and clear it */
    if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_MODE_SELECT) != READY)
        return I2C_BUSY;

    /* Send slave address + write condition */
    I2C_Send7bitAddress(obj->I2Cx, dev_address, I2C_Direction_Transmitter);

    if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED) != READY)
        return I2C_BUSY;

    /* Send data */
    while (size != 0)
    {
      I2C_SendData(obj->I2Cx, *data++);
      size--;

      if (size > 0)
      {
        if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_BYTE_TRANSMITTING) != READY)
          return I2C_BUSY;
      }
    }

    /* Send STOP condition */
    if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_BYTE_TRANSMITTED) != READY)
        return I2C_BUSY;

    I2C_GenerateSTOP(obj->I2Cx, ENABLE);

    return I2C_OK;
  }
  else
  {
    return I2C_ERROR;
  }

}

i2c_status_e i2c_master_read(i2c_t *obj, uint8_t dev_address, uint8_t *data, uint8_t size)
{
  uint8_t tmpSize = size;
  uint8_t idx = 0;
  if (obj->init_done == 1)
  {
    /* Enable ACK */
    I2C_AcknowledgeConfig(obj->I2Cx, ENABLE);
    /* Send START condition */
    I2C_GenerateSTART(obj->I2Cx, ENABLE);

    if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_MODE_SELECT) != READY)
        return I2C_BUSY;

    /* Send slave address + read condition */
    I2C_Send7bitAddress(obj->I2Cx, dev_address, I2C_Direction_Receiver);

    if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED) != READY)
        return I2C_BUSY;

    /* Send data */
    while (size != 0)
    {
      if (tmpSize == 1)
      {
        /* Disable ACK */
        I2C_AcknowledgeConfig(obj->I2Cx, DISABLE);

        /* Send STOP condition */
        I2C_GenerateSTOP(obj->I2Cx, ENABLE);

        tmpSize = 0;
      }
      else if (tmpSize == 2)
      {
        if(i2c_wait_for_event(obj->I2Cx, I2C_EVENT_MASTER_BYTE_RECEIVED) != READY)
            return I2C_BUSY;

        /* Disable ACK */
        I2C_AcknowledgeConfig(obj->I2Cx, DISABLE);

        while (I2C_GetFlagStatus(obj->I2Cx, I2C_FLAG_BTF) == RESET);

        /* Send STOP condition */
        I2C_GenerateSTOP(obj->I2Cx, ENABLE);

        while (size != 0)
        {
          data[idx++] = I2C_ReceiveData(obj->I2Cx);
          size--;
        }

        tmpSize = 0;
      }
      else if ((tmpSize > 2) && (size == 3))
      {
        while (I2C_GetFlagStatus(obj->I2Cx, I2C_FLAG_BTF) == RESET);

        /* Disable ACK */
        I2C_AcknowledgeConfig(obj->I2Cx, DISABLE);

        data[idx++] = I2C_ReceiveData(obj->I2Cx);
        size--;

        /* Send STOP condition */
        I2C_GenerateSTOP(obj->I2Cx, ENABLE);

        data[idx++] = I2C_ReceiveData(obj->I2Cx);
        size--;
        tmpSize = 0;
      }

      /* Read data received */
      if (I2C_GetFlagStatus(obj->I2Cx, I2C_FLAG_RXNE) == SET)
      {
        data[idx++] = I2C_ReceiveData(obj->I2Cx);
        size--;
      }
    }
  }
  else
  {
    return I2C_ERROR;
  }

  return I2C_OK;

}

void I2C1_EV_IRQHandler(void)
{
	I2C_slaveITCallback(I2C_LocalObject1);
}

void I2C2_EV_IRQHandler(void)
{
	I2C_slaveITCallback(I2C_LocalObject2);
}

void I2C1_ER_IRQHandler(void)
{
  if (I2C_GetITStatus(I2C1, I2C_IT_AF))
  {
    I2C_ClearITPendingBit(I2C1, I2C_IT_AF);
  }
}

void I2C2_ER_IRQHandler(void)
{
  if (I2C_GetITStatus(I2C2, I2C_IT_AF))
  {
    I2C_ClearITPendingBit(I2C2, I2C_IT_AF);
  }
}
